--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
 <script type="text/javascript" src="swf2js.js"></script>
 <script type="text/javascript">
     swf2js.load('616353_secure_picoSchoolDX_cs6.swf');
-</script>  
+</script>
+</body>
+</html>
